# Interactive-Graphics

./: .gitignore  CMakeLists.txt  CMakePresets.json  log.txt
scripts/: find_unused_vertices_obj.py
shaders/: example.frag  example.vert  light.frag  light.vert  shader.frag  shader.vert
src/: CMakeLists.txt  main.cpp
src/core/: Camera.cpp  Camera.hpp  Transform.cpp  Transform.hpp
src/core/Application/: Application.cpp  Application.hpp
src/graphics/geometry/: Triangle.cpp  Triangle.hpp
src/graphics/lighting/: Light.cpp  Light.hpp
src/graphics/material/: Material.cpp  Material.hpp
src/graphics/mesh/: Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp
src/graphics/renderer/: ElementBuffer.cpp  ElementBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/graphics/scene/: Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp
src/graphics/texture/: Texture.cpp  Texture.hpp
src/graphics/window/: WindowFramework.cpp  WindowFramework.hpp
src/math/: Matrix3D.cpp  Matrix3D.hpp  Vector3D.cpp  Vector3D.hpp
tests/: CMakeLists.txt
tests/math_t/: CMakeLists.txt  Matrix3D_test.cpp  Vector3D_test.cpp
